Documentation edits made through Mintlify web editor

--- a/introduction/plans-and-credits.mdx
+++ b/introduction/plans-and-credits.mdx
@@ -5,7 +5,9 @@ title: "Plans & Credits"
 
 ## What Are Credits?
 
-Credits are the core unit of work on Emergent — everything runs on them.
+![Whatare Credits Jp](/images/WhatareCredits_.jpg)
+
+Credits are the core unit of work on Emergent - everything runs on them.
 
 Each plan comes with a **monthly credit allowance** used for:
 
@@ -47,7 +49,7 @@ Each plan comes with a **monthly credit allowance** used for:
 
 ## Explore Our Plans
 
-![Plansand Pricing Jp](/images/PlansandPricing.jpg)
+![Plansand Pricing Pn](/images/PlansandPricing.png)
 
 ### Standard Plan - _\$20/month_
 
@@ -186,7 +188,7 @@ If you upgrade from **Standard (200/month)** mid-cycle, your billing and credits
 
 <Info>
   You’ll be charged **only for the unused portion** of the month at the new plan’s rate.\
-  Your billing cycle remains the same — it doesn’t restart.
+  Your billing cycle remains the same - it doesn’t restart.
 </Info>
 
 ---
