Documentation edits made through Mintlify web editor

--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -2,3 +2,270 @@
 title: "Getting Started"
 description: "Build your first full stack app"
 ---
+
+### How to Start Vibecoding as a Complete Beginner
+
+Welcome to the world of **Vibecoding** — a new way to build applications using natural language instead of traditional code.
+
+Instead of learning frameworks, syntax, or programming languages, you simply talk to an AI agent about what you want to build — and Emergent turns that vision into a working app.
+
+By the end of this guide, you’ll be able to:
+
+- Go from a business idea to a live app without writing code
+- Communicate effectively with AI agents
+- Build, test, and iterate naturally
+- Handle errors and refine your application
+- Add features like payments, user accounts, and more
+
+---
+
+## What Is Vibecoding?
+
+Vibecoding flips traditional programming on its head.
+
+Instead of learning how to code, you focus on **what** you want to build — and Emergent’s AI agents handle the **how**.
+
+| Traditional Coding                  | Vibecoding                          |
+| ----------------------------------- | ----------------------------------- |
+| Learn syntax, frameworks, and tools | Describe your idea in plain English |
+| Spend hours debugging               | Watch the AI build in minutes       |
+| You write every line                | You direct the outcome              |
+
+Example:
+
+You: “Add a user authentication system with email and password.”\
+Emergent: Builds it in 5 minutes — ready to test and iterate.
+
+<Tip>
+  The better you describe what you want, the better the result.\
+  Vibecoding is 80% communication, 20% refinement.
+</Tip>
+
+---
+
+## The Vibecoding Mindset
+
+Vibecoding isn’t about syntax — it’s about **vision and clarity**.
+
+You focus on:
+
+- The problem you’re solving
+- Who your users are
+- What the experience should feel like
+
+Emergent focuses on:
+
+- Clean code structure
+- Framework selection
+- Debugging, optimization, and deployment
+
+<Info>
+  You’re no longer a coder — you’re a product designer and creative director.\
+  Emergent handles the engineering.
+</Info>
+
+---
+
+## Understanding Emergent
+
+Emergent is your **vibecoding platform** — an AI-powered development environment where you build full-stack apps through conversation.
+
+You don’t need a code editor, terminal, or hosting setup.\
+Just describe your idea, and Emergent builds, tests, and deploys it for you.
+
+---
+
+### Example
+
+This Spider-Man landing page was built entirely using AI — from prompt to production.
+
+![Spider-Man Demo](/images/newsletter-spiderman.gif)
+
+---
+
+## How Emergent Works
+
+With Emergent, you describe what you want → Emergent writes the code → your app goes live.\
+It’s a true conversation-to-deployment flow.
+
+Emergent handles:
+
+- AI agents (E1, E1.1, E1.5, Mobile, Prototype)
+- React frontends + Node.js backends + MongoDB databases
+- Automatic testing and GitHub version control
+- One-click deployment with custom domains
+- Integrations like Stripe, OAuth, and external APIs
+
+<Check>
+  You focus on ideas. Emergent handles infrastructure.
+</Check>
+
+---
+
+## Choosing the Right Agent
+
+| Agent         | Best For                 | Speed    | Quality   | Use When                             |
+| ------------- | ------------------------ | -------- | --------- | ------------------------------------ |
+| **E-1**       | Complex, production apps | Slower   | Highest   | Building real products for customers |
+| **E-1.1**     | Balanced builds          | Moderate | High      | Everyday projects                    |
+| **E-1.5**     | Careful, detailed builds | Moderate | Very High | Mission-critical apps                |
+| **Prototype** | Quick UI mockups         | Fastest  | Basic     | Design validation                    |
+| **Mobile**    | iOS + Android apps       | Moderate | High      | Mobile-first builds                  |
+
+---
+
+## The Universal LLM Key
+
+You don’t need to manage multiple AI API keys.\
+Emergent provides a **Universal LLM Key** that gives you access to GPT-5, Claude, Gemini, and more — through one billing system powered by **Emergent Credits**.
+
+<Info>
+  No API setup. No billing headaches. Just start building instantly.
+</Info>
+
+---
+
+## Your First Vibecoding Project
+
+Let’s build your first app: a **Personal Book Tracker**.\
+It’s simple, useful, and a perfect way to learn the flow.
+
+---
+
+<Steps>
+  <Step title="Define Your Business Goal">
+    Spend 5 minutes thinking about your idea.\
+    Ask yourself:
+
+    - What problem am I solving?
+    - Who is this for?
+    - What are the 3–5 essential features?
+
+    Example:
+
+    - Problem: Forget which books I’ve read
+    - Core Features: Add books, track progress, rate books, view stats
+  </Step>
+  <Step title="Write Your Initial Prompt">
+    Use this prompt framework:
+
+    ```
+    Create an app for [PURPOSE] that includes:
+    - [FEATURE 1]
+    - [FEATURE 2]
+    - [FEATURE 3]
+    - [DESIGN STYLE]
+    ```
+
+    Example Prompt:\
+    Create a personal book tracking app where users can:
+
+    - Add books with title, author, and cover image
+    - Mark books as “Want to Read”, “Currently Reading”, or “Finished”
+    - Rate and review books
+    - View reading statistics
+    - Search by title or author
+
+    Use warm, library-themed colors and a clean grid layout.
+  </Step>
+  <Step title="The Planning Session">
+    The agent will ask clarifying questions like:
+
+    - “Use Universal LLM Key?” → Yes
+    - “Add authentication?” → Not yet
+    - “Design preferences?” → Tailwind CSS with warm tones
+
+    <Tip>
+      Unsure about a term? Ask the agent to explain before building.\
+      Every build is a learning opportunity.
+    </Tip>
+  </Step>
+  <Step title="Watch It Build">
+    Once confirmed, Emergent begins generating your app:
+
+    - Project structure created
+    - Database setup (MongoDB)
+    - UI components rendered
+    - Features implemented
+    - Testing complete
+
+    <Info>
+      Builds usually take 5–15 minutes.\
+      Read the agent’s explanations — they teach you how the app works.
+    </Info>
+  </Step>
+  <Step title="Test Your First Version">
+    Once it’s live, open the preview link and test every feature.\
+    Check your browser console (F12) for any errors or issues.
+  </Step>
+  <Step title="Iterate and Improve">
+    After testing, note what you’d like to refine.
+
+    Good Feedback Example:
+
+    - Make book covers 20% larger
+    - Add a delete button
+    - Show a “Currently Reading” section at the top
+
+    Bad Feedback Example:
+
+    - “Make it better”
+
+    <Check>
+      Be clear and specific. The agent rewards detail and direction.
+    </Check>
+  </Step>
+  <Step title="Handling Your First Error">
+    Don’t panic — errors are part of the process.\
+    Example:
+
+    ```
+    Error: Failed to POST /api/books
+    Status: 500 Internal Server Error
+    ```
+
+    How to report it: “When I click ‘Add Book’, nothing happens.\
+    Console shows: Error 500 – Failed to POST /api/books.”
+
+    <Note>
+      Always describe what you expected vs. what happened,\
+      and report one issue at a time.
+    </Note>
+  </Step>
+</Steps>
+
+---
+
+## Wrapping Up
+
+You don’t need to learn to code — you need to learn to communicate with AI.\
+That’s the essence of vibecoding.
+
+You describe what you want, the agent builds it, and you refine through feedback.
+
+<Info>
+  Start small (like the Book Tracker), focus on clarity, and iterate one step at a time.
+</Info>
+
+---
+
+## Your Next Steps
+
+1. Pick a simple idea you actually want to use
+2. Write one clear prompt with 3–5 features and a vibe note
+3. Let Emergent build it
+4. Test, refine, and repeat
+
+As you grow comfortable, add **auth, payments, and integrations** when they serve your product — not before.
+
+<Tip>
+  Vibecoding is more like directing than programming.\
+  You set the vision; Emergent handles the execution.
+</Tip>
+
+---
+
+<Check>
+  Your first working app is closer than you think —\
+  open Emergent, drop your first prompt, and watch your idea come alive.
+</Check>
