Documentation edits made through Mintlify web editor

--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -60,7 +60,7 @@ Emergent focuses on:
 - Debugging, optimization, and deployment
 
 <Info>
-  You’re no longer a coder — you’re a product designer and creative director.\
+  You’re no longer a coder - you’re a product designer and creative director.\
   Emergent handles the engineering.
 </Info>
 
