Documentation edits made through Mintlify web editor

--- a/features/github-integration.mdx
+++ b/features/github-integration.mdx
@@ -1,8 +1,9 @@
 ---
 title: "GitHub Integration"
+description: "Connect Emergent with GitHub to seamlessly save, version, and collaborate on your projects - all without leaving your workspace."
 ---
 
-Emergent’s **GitHub integration** lets you manage your projects with version control, collaborate with teams, and back up your work automatically — all from within the Emergent interface.
+Emergent’s **GitHub integration** lets you manage your projects with version control, collaborate with teams, and back up your work automatically - all from within the Emergent interface.
 
 You can connect your GitHub account, push and pull code, manage branches, and collaborate across multiple environments seamlessly.
 
