Documentation edits made through Mintlify web editor

--- a/introduction/faq.mdx
+++ b/introduction/faq.mdx
@@ -1,3 +1,205 @@
 ---
 title: "FAQs (Frequently Asked Questions) "
 ---
+
+# Emergent Platform - Frequently Asked Questions (FAQ)
+
+Get quick answers to common questions about using Emergent — from credits and agents to GitHub integration, deployment, and troubleshooting.
+
+---
+
+<AccordionGroup>
+  <Accordion title="About Emergent" icon="info">
+    **Q: What is Emergent?**\
+    Emergent is an AI-powered coding platform that lets you build complete web and mobile applications by describing what you want — no coding required.
+
+    **Q: Who is Emergent for?**
+
+    - Developers who want to build faster
+    - PMs and operators creating internal tools
+    - Solo founders building MVPs
+    - Non-coders launching their first product
+
+    **Q: How is Emergent different?**\
+    ✅ Conversational interface, not form-based\
+    ✅ Handles deployment, backend, and infrastructure\
+    ✅ First truly _agentic_ coding platform with full-stack capability\
+    ✅ Automates both setup and deployment
+  </Accordion>
+  <Accordion title="Pricing and Credits" icon="coins">
+    **Q: How do credits work?**\
+    Credits are used for AI-driven work like code generation, testing, cloud deployments, and integrations.
+
+    **Q: What are the pricing tiers?**
+
+    - Free: 5 credits/month
+    - Starter: \$10/month (50 credits)
+    - Standard: \$20/month (100 credits)
+    - Top-ups: \$10 for 50 credits (never expire)
+
+    **Q: What happens if I run out of credits?**\
+    You can top up credits anytime. Monthly credits reset automatically each billing cycle.
+
+    **Q: How can I optimize credit usage?**
+
+    - Use rollback to delete extra messages
+    - Break large projects into smaller tasks
+    - Save to GitHub between milestones
+    - Be specific with your prompts
+  </Accordion>
+  <Accordion title="Available Agents" icon="bot">
+    **Q: What are the available agents?**
+
+    - **E1:** Stable, production-ready builds with full testing
+    - **E1.1:** Faster, modular builds for backend-heavy projects
+    - **E1.5:** Advanced, structured builds for Pro users
+    - **Mobile Agent:** Builds mobile apps using Expo (React Native)
+
+    **Q: Which agent should I use?**
+
+    - Use **E1** for complete production apps
+    - Use **E1.1** for flexible, backend-focused projects
+    - Use **E1.5** for complex structured builds
+    - Use **Mobile Agent** for iOS/Android apps
+  </Accordion>
+  <Accordion title="Technology Stack" icon="layers">
+    **Supported Technologies**
+
+    - Web: React + FastAPI + MongoDB + Next.js
+    - Mobile: Expo (React Native) + FastAPI + MongoDB
+    - Backend: Python (FastAPI), Node.js
+    - Database: MongoDB
+
+    **Not Supported:** Flutter, Kotlin, Swift (for now)
+
+    **What can you build?**\
+    ✅ Full-stack web or mobile apps\
+    ✅ MVPs and SaaS tools\
+    ✅ APIs, dashboards, and internal tools\
+    ✅ E-commerce or social platforms
+  </Accordion>
+  <Accordion title="GitHub Integration" icon="github">
+    **Q: How do I connect GitHub?**
+
+    1. Click your profile icon → “Connect GitHub”
+    2. Authorize Emergent on GitHub
+    3. Grant repository permissions
+
+    **Q: How to save to GitHub?**\
+    Click **Save to GitHub**, select repo and branch, then push.\
+    Emergent commits your code automatically.
+
+    **Q: How to pull from GitHub?**\
+    Click the GitHub icon → Select repository → Choose branch → Import.
+
+    **Q: GitHub connection not working?**\
+    Go to GitHub → Settings → Applications → Remove “Emergent” → Reconnect.
+  </Accordion>
+  <Accordion title="Deployment" icon="rocket">
+    **Q: How does deployment work?**
+
+    - Test with **Preview**
+    - Click **Deploy** → “Deploy Now”
+    - Wait 5–10 minutes for live URL
+
+    **Deployment Cost:** 50 credits/month per deployed app
+
+    **Supports:**\
+    ✅ Custom domains\
+    ✅ Automatic SSL\
+    ✅ Continuous deployment
+
+    **Mobile Deployment:** Available through **Expo integration** in Mobile Agent.
+  </Accordion>
+  <Accordion title="Universal Key (LLM Access)" icon="key-round">
+    **Q: What is the Universal Key?**\
+    One secure API key that gives you access to GPT, Claude, and Gemini through Emergent — no separate credentials needed.
+
+    **Supported Capabilities:**
+
+    - Text generation (GPT, Claude, Gemini)
+    - Image generation (OpenAI GPT-Image-1, Gemini Nano Banana)
+    - Vision support
+
+    **How to access it:**\
+    Profile → **Universal Key** → Copy or manage your key\
+    All usage is billed via Emergent credits.
+  </Accordion>
+  <Accordion title="Troubleshooting" icon="wrench">
+    **Common Issues:**
+
+    - **Agent asleep:** Click “Wake Up Agent” and wait 5–10 minutes
+    - **GitHub push conflict:** Create a new branch before pushing
+    - **Preview not updating:** Hard refresh or restart preview
+    - **Deployment failed:** Check logs, verify environment variables
+    - **Expo app not loading:** Ensure devices share the same Wi-Fi network
+
+    <Tip>
+      Save your project to GitHub regularly — it’s the safest way to recover from errors or context resets.
+    </Tip>
+  </Accordion>
+  <Accordion title="Account and Subscription" icon="credit-card">
+    **Q: How do I cancel my plan?**\
+    Credits → Manage Subscription → Cancel Billing (via Stripe).
+
+    **Q: What happens to my credits?**
+
+    - Monthly credits expire at end of cycle
+    - Top-up credits never expire
+
+    **Q: How to upgrade plan?**\
+    Go to Billing → Select plan → Confirm upgrade\
+    Changes apply instantly.
+
+    **Q: Supported payment methods?**\
+    Stripe (supports all major credit/debit cards).
+  </Accordion>
+  <Accordion title="Security and Privacy" icon="shield-check">
+    **Q: Is my code secure?**\
+    Yes — your code is private, encrypted, and not used for AI training.
+
+    **Q: Can I collaborate with others?**\
+    Yes, push your work to GitHub and share access.
+
+    **Q: Where is data stored?**\
+    All data is securely hosted on Emergent’s cloud infrastructure.
+  </Accordion>
+  <Accordion title="Support and Community" icon="message-square">
+    **Need Help?**
+
+    - **Discord:** [Join the Community](https://discord.gg/VzKfwCXC4A)
+    - **Email:** [support@emergent.sh](mailto:support@emergent.sh)
+
+    Include your **Job ID** and error screenshots for faster help.
+
+    **Response Times:**
+
+    - Discord: Within a few hours
+    - Email: 24–48 hours
+  </Accordion>
+  <Accordion title="Getting Started" icon="sparkles">
+    **Q: How do I start my first project?**
+
+    1. Sign up or log in
+    2. Select your agent (E1, E1.1, E1.5, or Mobile)
+    3. Describe your idea in plain English
+    4. Let the agent build, preview, and deploy your app
+
+    **Q: Can non-coders use Emergent?**\
+    Absolutely! You just describe what you want — no technical setup required.
+
+    **Q: Typical build time for MVPs?**
+
+    - Simple apps: 30 min – 2 hours
+    - Medium apps: 2–5 hours
+    - Complex apps: Multiple sessions
+  </Accordion>
+</AccordionGroup>
+
+---
+
+<Info>
+  Still have questions?\
+  Ask in our [Discord Community](https://discord.gg/VzKfwCXC4A) or email [support@emergent.sh](mailto:support@emergent.sh).\
+  We’re here to help you build faster with Emergent.
+</Info>
