Documentation edits made through Mintlify web editor

--- a/introduction/faq.mdx
+++ b/introduction/faq.mdx
@@ -47,7 +47,7 @@ Get quick answers to common questions about using Emergent — from credits and 
     - Save to GitHub between milestones
     - Be specific with your prompts
   </Accordion>
-  <Accordion title="Available Agents" icon="bot">
+  <Accordion title="Available Agents" icon="robot">
     **Q: What are the available agents?**
 
     - **E1:** Stable, production-ready builds with full testing
@@ -62,7 +62,7 @@ Get quick answers to common questions about using Emergent — from credits and 
     - Use **E1.5** for complex structured builds
     - Use **Mobile Agent** for iOS/Android apps
   </Accordion>
-  <Accordion title="Technology Stack" icon="layers">
+  <Accordion title="Technology Stack" icon="database">
     **Supported Technologies**
 
     - Web: React + FastAPI + MongoDB + Next.js
@@ -111,7 +111,7 @@ Get quick answers to common questions about using Emergent — from credits and 
 
     **Mobile Deployment:** Available through **Expo integration** in Mobile Agent.
   </Accordion>
-  <Accordion title="Universal Key (LLM Access)" icon="key-round">
+  <Accordion title="Universal Key (LLM Access)" icon="key">
     **Q: What is the Universal Key?**\
     One secure API key that gives you access to GPT, Claude, and Gemini through Emergent — no separate credentials needed.
 
@@ -164,7 +164,7 @@ Get quick answers to common questions about using Emergent — from credits and 
     **Q: Where is data stored?**\
     All data is securely hosted on Emergent’s cloud infrastructure.
   </Accordion>
-  <Accordion title="Support and Community" icon="message-square">
+  <Accordion title="Support and Community" icon="people-group">
     **Need Help?**
 
     - **Discord:** [Join the Community](https://discord.gg/VzKfwCXC4A)
