--- a/introduction/getting-started.mdx
+++ b/introduction/getting-started.mdx
@@ -79,7 +79,7 @@ Just describe your idea, and Emergent builds, tests, and deploys it for you.
 
 This Spider-Man landing page was built entirely using AI — from prompt to production.
 
-![Spider-Man Demo](/images/NewsletterSpiderManGIF.gif)
+![Spider-Man Demo](/SpidermanLandingPage.png)
 
 ---
 
@@ -106,13 +106,14 @@ Emergent handles:
 
 ![Agentselector Pn](/images/agentselector.png)
 
-| Agent         | Best For                 | Speed    | Quality   | Use When                             |
-| ------------- | ------------------------ | -------- | --------- | ------------------------------------ |
-| **E-1**       | Complex, production apps | Slower   | Highest   | Building real products for customers |
-| **E-1.1**     | Balanced builds          | Moderate | High      | Everyday projects                    |
-| **E-1.5**     | Careful, detailed builds | Moderate | Very High | Mission-critical apps                |
-| **Prototype** | Quick UI mockups         | Fastest  | Basic     | Design validation                    |
-| **Mobile**    | iOS + Android apps       | Moderate | High      | Mobile-first builds                  |
+| **<u>Agent</u>** | **Best For**               | **Speed** | **Quality** | **Use When**                             |
+| ---------------- | -------------------------- | --------- | ----------- | ---------------------------------------- |
+| **E-1**          | Complex, production apps   | Slower    | Highest     | Building real products for customers     |
+| **E-1.1**        | Balanced builds            | Moderate  | High        | Everyday projects                        |
+| **E-1.5**        | Careful, detailed builds   | Moderate  | Very High   | Mission-critical apps                    |
+| **E-2**          | Thorough and Hyper-Focused | Moderate  | Very high   | Detailed apps that need complex thinking |
+| **Prototype**    | Quick UI mockups           | Fastest   | Basic       | Design validation                        |
+| **Mobile**       | iOS + Android apps         | Moderate  | High        | Mobile-first builds                      |
 
 ---
 
